--- a/app/globals.css
+++ b/app/globals.css
@@ -4,11 +4,11 @@
 
 input,
 select {
-  @apply w-[400px] border border-gray-200 py-2 px-6 bg-zinc-100/40;
+  @apply w-full border border-gray-200 py-2 px-6 bg-zinc-100/40;
 }
 
 .dropdown {
-  @apply absolute right-0 top-full mt-3 w-full p-5 rounded-lg bg-white min-w-[210px] flex flex-col gap-2 justify-end items-end border-4;
+  @apply absolute right-0 top-full mt-3 w-full p-5 rounded-lg bg-white min-w-[210px] flex flex-col gap-5 justify-end items-end border-4;
 }
 
 .dropdown_link {
