--- a/app/globals.css
+++ b/app/globals.css
@@ -8,11 +8,12 @@ select {
 }
 
 .dropdown {
-  @apply absolute right-0 top-full mt-3 w-full p-5 rounded-lg bg-white min-w-[210px] flex flex-col gap-5 justify-end items-end border-4;
+  @apply absolute right-0 top-full mt-3 w-full p-5 rounded-lg bg-white min-w-[210px] flex flex-col gap-2 justify-end items-end border-4;
 }
 
 .dropdown_link {
-  @apply text-sm text-gray-700 hover:text-gray-500 font-medium;
+  @apply text-sm w-full px-2 py-2 rounded-md text-black hover:bg-black hover:text-white font-medium transition-all duration-300 cursor-pointer;
+
 }
 
 .red_btn {
